# cli

./: Dockerfile  Makefile  README.md  TESTING.md  building_filter_skills.md  building_filter_skills_notes.md  codemode.md  lkr.md  pyproject.toml  search.md  test_dependency_resolution.py
.github/workflows/: ci.yml  release.yml  test-dependencies.yml
lkr/: __init__.py  auth_service.py  classes.py  constants.py  custom_types.py  extended_sdk_methods.py  logger.py  logging.py  main.py  mcp_transport.py  types.py
lkr/auth/: main.py  oauth.py
lkr/codemode/: LOCAL.md  constant.py  download_swagger.py  examples.py  help.py  main.py  readme.py  swagger.json  type.py
lkr/db_template/: __init__.py  artifact_service.py  lookup_service.py  main.py
lkr/extended_sdk_methods/: __init__.py  classes.py  main.py
lkr/mcp/: classes.py  main.py  utils.py
lkr/observability/: classes.py  main.py  utils.py
lkr/observability/tests/: test_main.py
lkr/query_mcp/: __init__.py  main.py
lkr/tools/: classes.py  lookml.py  main.py  permission_deprecation.py
lkr_dev_cli/: __init__.py
terraform/user-attribute-updater/: main.tf  outputs.tf  variables.tf
tests/: test_codemode.py  test_codemode2.py  test_codemode_new_features.py  test_db_template.py  test_dependency_resolution.py  test_extended_sdk_methods.py  test_init_sdk.py  test_lookml_tools.py  test_oauth_account.py  test_permission_deprecation.py  test_version.py
