[project]
name = "lkr-dev-cli"
version = "0.0.0"
description = "lkr: a command line interface for looker"
readme = "README.md"
license = "MIT"
authors = [
    { name = "bwebs"}
]
requires-python = ">=3.12"
dependencies = [
    "looker-sdk>=25.10.0",
    "pydantic>=2.11.7",
    "pydash>=8.0.5",
    "typer>=0.16.0",
    "requests>=2.32.4",
    "cryptography>=45.0.4",
    "structlog>=25.4.0",
    "questionary>=2.1.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.10.1",
    "duckdb>=1.3.1",
    "fastapi[standard]>=0.115.14"
]
codemode = [
    "pydantic-monty",
    "mcp[cli]>=1.10.1"
]
observability = [
    "fastapi[standard]>=0.115.14",
    "selenium>=4.34.0"
]
tools = [
    "fastapi[standard]>=0.115.14"
]
all = [
    "mcp[cli]>=1.10.1",
    "fastapi[standard]>=0.115.14",
    "selenium>=4.34.0",
    "duckdb>=1.3.1",
    "pydantic-monty"
]

[project.scripts]
lkr = "lkr.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.hatch.build.targets.wheel]
packages = ["lkr"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

