[project]
name = "lkr-dev-cli"
version = "0.0.0"
description = "lkr: a command line interface for looker"
readme = "README.md"
license = "MIT"
authors = [
    { name = "bwebs"}
]
requires-python = ">=3.12"
dependencies = [
    "looker-sdk>=25.10.0",
    "pydantic>=2.11.7",
    "pydash>=8.0.5",
    "typer>=0.16.0",
    "requests>=2.34.2",
    "cryptography>=48.0.1",
    "structlog>=25.4.0",
    "questionary>=2.1.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.27.2",
    "duckdb>=1.3.1",
    "fastapi[standard]>=0.136.3"
]
codemode = [
    "pydantic-monty",
    "mcp[cli]>=1.27.2"
]
observability = [
    "fastapi[standard]>=0.136.3",
    "selenium>=4.34.0"
]
tools = [
    "fastapi[standard]>=0.136.3"
]
all = [
    "mcp[cli]>=1.27.2",
    "fastapi[standard]>=0.136.3",
    "selenium>=4.34.0",
    "duckdb>=1.3.1",
    "pydantic-monty"
]

[project.scripts]
lkr = "lkr.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.12.1",
    "python-dotenv>=1.2.2",
    "ty",
]

[tool.hatch.build.targets.wheel]
packages = ["lkr", "lkr_dev_cli"]

